--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Головна</a></li>
-        <li><a href="#about">Про мене</a></li>
-        <li><a href="praktichni.html">Практичні роботи</a></li>
-        <li><a href="laboratorni.html">Лабораторні заняття</a></li>
+    	<li><a href="#about">Про мене</a></li>
+    	<li><a href="#praktichni">Практичні роботи</a></li>
+    	<li><a href="#laboratorni">Лабораторні заняття</a></li>
       </ul>
     </nav>
   </header>
