--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <ul>
       <li><a href="praktichni1.html">Практична робота №1</a></li>
       <li><a href="praktichni2.html">Практична робота №2</a></li>
+      <li><a href = "practice3.html">Практична робота №3</a></li>
     </ul>
   </section>
   <section>
@@ -46,3 +47,4 @@
 
 </body>
 </html>
+
