--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <ul>
       <li><a href="lab1.html">Лабораторне заняття №1</a></li>
       <li><a href="lab2.html">Лабораторне заняття №2</a></li>
+      <li><a href="lab3.html">Лабораторне заняття №3</a>></li>
     </ul>
   </section>
   <footer>
@@ -47,4 +48,5 @@
 
 </body>
 </html>
+
 
