update files for website

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <ul>
       <li><a href="lab1.html">Лабораторне заняття №1</a></li>
       <li><a href="lab2.html">Лабораторне заняття №2</a></li>
-      <li><a href="lab3.html">Лабораторне заняття №3</a>></li>
+      <li><a href="lab3.html">Лабораторне заняття №3</a></li>
+	  <li><a href="lab4.html">Лабораторне заняття №4</a></li>
     </ul>
   </section>
   <footer>
