--- a/practice4.html
+++ b/practice4.html
@@ -167,5 +167,6 @@
         <p>© 2025 Бадовська Аріна | <a href="https://github.com/AriSnowie97">GitHub</a></p>
         <p>Контакти: diysylveon@gmail.com</p>
     </footer>
+	<script src="script.js"></script>
 </body>
 </html>
