--- a/praktichni1.html
+++ b/praktichni1.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="blob blob1"></div>
+  <div class="blob blob2"></div>
    <header>
     <h1>Особистий веб-сайт Бадовської Аріни</h1>
     <nav>
@@ -19,7 +21,7 @@
     </nav>
   </header>
 
-<section>
+<section class="glass-card">
   <h1>Практична №1 - Таблиця занять</h1>
 </section>
 
@@ -82,5 +84,6 @@
     <p>Контакти: diysylveon@gmail.com</p>
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="theme-script.js"></script>
 </body>
 </html>
