--- a/lab4.html
+++ b/lab4.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="blob blob1"></div>
+  <div class="blob blob2"></div>
 <header>
     <h1>Особистий веб-сайт Бадовської Аріни</h1>
     <nav>
@@ -19,10 +21,10 @@
       </ul>
     </nav>
   </header>
- <section>
+	<section class="glass-card">
         <h2>Лабораторна робота №4: Використовуючи шаблон розробити сторінку планера.</h2>
     </section>
-    <div class="planner-container">
+    <div class="planner-container glass-card">
 
         <header class="planner-header">
             <h1>Weekly Plan</h1>
@@ -141,5 +143,6 @@
         <a href="index.html">Повернутися на головну</a>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="theme-script.js"></script>
 </body>
 </html>
