--- a/practice4.html
+++ b/practice4.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="blob blob1"></div>
+  <div class="blob blob2"></div>
     <header>
         <h1>Особистий сайт Бадовської Аріни</h1>
         <nav>
@@ -19,7 +21,7 @@
         </nav>
     </header>
 
-    <section>
+	<section class="glass-card">
         <h2>Практична робота №4: Клавіатура на CSS Grid</h2>
     </section>
     
