debug styles and added button

--- a/praktichni1.html
+++ b/praktichni1.html
@@ -11,6 +11,10 @@
   <div class="blob blob2"></div>
    <header>
     <h1>Особистий веб-сайт Бадовської Аріни</h1>
+	   <button id="theme-toggle" class="theme-toggle-btn">
+        <span class="icon-sun">☀️</span>
+        <span class="icon-moon">🌙</span>
+    </button>
     <nav>
       <ul>
         <li><a href="index.html">Головна</a></li>
