--- a/lab4.html
+++ b/lab4.html
@@ -11,6 +11,10 @@
   <div class="blob blob1"></div>
   <div class="blob blob2"></div>
 <header>
+	<button id="theme-toggle" class="theme-toggle-btn">
+        <span class="icon-sun">☀️</span>
+        <span class="icon-moon">🌙</span>
+    </button>
     <h1>Особистий веб-сайт Бадовської Аріни</h1>
     <nav>
       <ul>
