--- a/practice4.html
+++ b/practice4.html
@@ -10,6 +10,10 @@
   <div class="blob blob1"></div>
   <div class="blob blob2"></div>
     <header>
+		<button id="theme-toggle" class="theme-toggle-btn">
+        <span class="icon-sun">☀️</span>
+        <span class="icon-moon">🌙</span>
+    </button>
         <h1>Особистий сайт Бадовської Аріни</h1>
         <nav>
             <ul>
