added new lab file and updated styles there

--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@
             <p class="text-muted-custom">Планер на CSS Grid.</p>
           </article>
         </div>
-        
+		  
+        <div class="col-lg-3 col-md-6">
+          <article class="p-4 rounded h-100 glass-card">
+            <h3><a href="lab4.html" class="text-decoration-none stretched-link">Лабораторна №6</a></h3>
+            <p class="text-muted-custom">Анімація на сторінці</p>
+          </article>
+        </div>        
       </div>
     </section>
 
@@ -146,7 +152,19 @@
             </div>
           </article>
         </div>
-
+        <div class="col-lg-7">
+          <article class="glass-card rounded p-4 h-100">
+            <div class="d-flex flex-column h-100">
+              <h3><a href="practice4.html" class="text-decoration-none stretched-link">Практична робота №6</a></h3>
+              <p class="text-muted-custom flex-grow-1">Анімація з використанням CSS та спрайтів Покемонів</p>
+              <div>
+                <span class="badge bg-danger text-white">CSS</span>
+                <span class="badge bg-primary text-white">HTML</span>
+                <span class="badge bg-warning text-dark">JavaScript</span>
+              </div>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
