connect lab6.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="col-lg-7">
           <article class="glass-card rounded p-4 h-100">
             <div class="d-flex flex-column h-100">
-              <h3><a href="practice4.html" class="text-decoration-none stretched-link">Практична робота №6</a></h3>
+              <h3><a href="lab6.html" class="text-decoration-none stretched-link">Практична робота №6</a></h3>
               <p class="text-muted-custom flex-grow-1">Анімація з використанням CSS та спрайтів Покемонів</p>
               <div>
                 <span class="badge bg-danger text-white">CSS</span>
