--- a/lab1.html
+++ b/lab1.html
@@ -18,7 +18,7 @@
       </ul>
     </nav>
   </header>
-  <section>
+  <section class="glass-card">
     <h2>Форма реєстрації</h2>
     <form action="https://webhook.site/cbc3ef19-3447-477c-9318-0e2226b5dbb6" method="post">
       
