--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<body class="home-page">
   <div class="blob blob1"></div>
   <div class="blob blob2"></div>
 
