--- a/lab1.html
+++ b/lab1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Особистий веб-сайт Бадовської Аріни</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,28 +11,21 @@
   <div class="blob blob2"></div>
   <header>
     <h1>Особистий веб-сайт Бадовської Аріни</h1>
-	  <button id="theme-toggle" class="theme-toggle-btn">
+    <button id="theme-toggle" class="theme-toggle-btn">
         <span class="icon-sun">☀️</span>
         <span class="icon-moon">🌙</span>
     </button>
     <nav>
       <ul>
         <li><a href="index.html">Головна</a></li>
-        <li><a href="#about">Про мене</a></li>
-        <li><a href="praktichni.html">Практичні роботи</a></li>
-        <li><a href="laboratorni.html">Лабораторні заняття</a></li>
+        <li><a href="index.html#about">Про мене</a></li>
+        <li><a href="index.html#praktichni">Практичні роботи</a></li>
+        <li><a href="index.html#laboratorni">Лабораторні заняття</a></li>
       </ul>
     </nav>
   </header>
-<<<<<<< HEAD
-<<<<<<< HEAD
+
   <section class="glass-card">
-=======
-	<section class="glass-card">
->>>>>>> 66c4d31a790bfe9d841fc891e6f492fc211f8b5c
-=======
-	<section class="glass-card">
->>>>>>> origin/main
     <h2>Форма реєстрації</h2>
     <form action="https://webhook.site/cbc3ef19-3447-477c-9318-0e2226b5dbb6" method="post">
       
