--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <footer class="my-3">
-      <p> 2025 Бадовська Аріна | <a href="https://github.com/AriSnowie97">GitHub</a></p>
+      <p>© 2025 Бадовська Аріна | <a href="https://github.com/AriSnowie97">GitHub</a></p>
       <p>Контакти: diysylveon@gmail.com</p>
     </footer>
 
