--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
             <h3><a href="lab6.html" class="text-decoration-none stretched-link">Лабораторна №6</a></h3>
             <p class="text-muted-custom">Анімація на сторінці</p>
           </article>
-        </div>        
+        </div>
+		<div class="col-lg-3 col-md-6">
+          <article class="p-4 rounded h-100 glass-card">
+            <h3><a href="lab7.html" class="text-decoration-none stretched-link">Лабораторна №7</a></h3>
+            <p class="text-muted-custom">Новорічна листівка (методологія BEM)Методологія BEM</p>
+          </article>
+        </div>
       </div>
     </section>
 
